--- a/tests/index.html
+++ b/tests/index.html
@@ -41,12 +41,14 @@
   }
 </style>
 <script>
+var memory;
 var exports;
 function load(file) {
+  memory = new WebAssembly.Memory({ initial: 1 });
   console.log("loading '" + file + "' ...");
   fetch(file)
     .then(result => result.arrayBuffer())
-    .then(buffer => WebAssembly.instantiate(buffer, {}))
+    .then(buffer => WebAssembly.instantiate(buffer, { env: { memory: memory }}))
     .then(result => {
       Object.keys(exports = result.instance.exports).forEach(key => {
         if (typeof exports[key] === 'function')
@@ -66,6 +68,24 @@ function load(file) {
       document.getElementById("wast").value = err.message + "\n\n" + err.stack;
       document.getElementById("wast").style.display = "block";
     });
+}
+
+function mem(offset) {
+  if (!offset) offset = 0;
+  var mem = new Uint8Array(memory.buffer, offset);
+  var stackTop = new Uint32Array(memory.buffer, 4, 1)[0];
+  var hex = [];
+  for (var i = 0; i < 256; ++i) {
+    var o = (offset + i).toString(16);
+    while (o.length < 3) o = "0" + o;
+    if ((i & 15) === 0) {
+      hex.push("\n" + o + ":");
+    }
+    var h = mem[i].toString(16);
+    if (h.length < 2) h = "0" + h;
+    hex.push(h);
+  }
+  console.log("size=" + mem.length + ", stackTop=" + stackTop + hex.join(" ") + " ...");
 }
 </script>
 </head>
