--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>AssemblyScript Playground</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
+<link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
 <style>
 html, body { width: 100%; height: 100%; margin: 0; padding: 0; overflow: hidden; font-family: sans-serif; font-size: 12pt; }
 .editor { width: 50%; height: calc(100% - 45px); padding-top: 5px; border: 0; float: left; background: #1e1e1e; }
@@ -31,7 +32,7 @@ button.download { left: 100%; margin-left: -150px; bottom: 15px; }
 <div style="clear: both" />
 
 <script src="assets/assemblyscript.min.js"></script>
-<script src="assets/monaco/loader.js"></script>
+<script src="assets/vs/loader.js"></script>
 <script src="assets/main.js"></script>
 </body>
 </html>
