--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <title>AssemblyScript Playground</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+<meta name="description" content="A subset of TypeScript that compiles to WebAssembly. Try it out right in your browser!" />
 <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
 <style>
 html, body { width: 100%; height: 100%; margin: 0; padding: 0; overflow: hidden; font-family: sans-serif; font-size: 12pt; }
