--- a/index.html
+++ b/index.html
@@ -5,23 +5,12 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="description" content="A subset of TypeScript that compiles to WebAssembly. Try it out right in your browser!" />
-<link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
-<style>
-html, body { width: 100%; height: 100%; margin: 0; padding: 0; overflow: hidden; font-family: sans-serif; font-size: 12pt; }
-.editor { width: 50%; height: calc(100% - 45px); padding-top: 5px; border: 0; float: left; background: #1e1e1e; }
-button { position: absolute; z-index: 4294967295; width: 120px; padding: 5px 10px; border-radius: 5px; cursor: pointer; outline: none; }
-button.compile { left: 50%; margin-left: -150px; bottom: 15px; }
-button.download { left: 100%; margin-left: -150px; bottom: 15px; }
-#header { height: 40px; box-sizing: border-box; padding: 0 12px; line-height: 40px; background: #0074c1; color: #fff; }
-#header a { color: #ccc; }
-#header .r { float: right; }
-#header a:hover { color: #fff; }
-</style>
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+<link rel="stylesheet" type="text/css" href="assets/main.css" />
 </head>
 <body>
 
-<button id="compile-button" class="compile">Compile →</button>
-<button id="download-button" class="download">Download ⭳</button>
+<img id="loading-icon" src="assets/loading.gif" alt="Loading..." />
 
 <div id="header">
   <span class="r">see <a href="https://github.com/dcodeIO/AssemblyScript">github.com/dcodeIO/AssemblyScript</a> for details</span>
@@ -35,5 +24,8 @@ button.download { left: 100%; margin-left: -150px; bottom: 15px; }
 <script src="assets/assemblyscript.min.js"></script>
 <script src="assets/vs/loader.js"></script>
 <script src="assets/main.js"></script>
+
+<button id="compile-button" class="compile">Compile →</button>
+<button id="download-button" class="download">Download ⭳</button>
 </body>
 </html>
