--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="description" content="A subset of TypeScript that compiles to WebAssembly. Try it out right in your browser!" />
+<meta property="og:image" content="icon.png" />
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 <link rel="stylesheet" type="text/css" href="assets/main.css" />
 </head>
