--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <div id="assembly" class="editor"></div>
 <div style="clear: both" />
 
+<script src="assets/binaryen.js"></script>
 <script src="assets/assemblyscript.min.js"></script>
 <script src="assets/vs/loader.js"></script>
 <script src="assets/main.js"></script>
