--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <div id="assembly" class="editor"></div>
 <div style="clear: both" />
 
-<script src="assets/binaryen.js"></script>
-<script src="assets/assemblyscript.min.js"></script>
+<script src="//rawgit.com/dcodeIO/AssemblyScript/master/lib/binaryen/index.js"></script>
+<script src="//rawgit.com/dcodeIO/AssemblyScript/master/dist/assemblyscript.min.js"></script>
 <script src="assets/vs/loader.js"></script>
 <script src="assets/main.js"></script>
 
