--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 <div id="assembly" class="editor"></div>
 <div style="clear: both" />
 
-<script src="//rawgit.com/dcodeIO/AssemblyScript/master/lib/binaryen/index.js"></script>
-<script src="//rawgit.com/dcodeIO/AssemblyScript/master/dist/assemblyscript.min.js"></script>
-<script src="assets/vs/loader.js"></script>
+<script src="https://rawgit.com/dcodeIO/AssemblyScript/master/lib/binaryen/index.js"></script>
+<script src="https://rawgit.com/dcodeIO/AssemblyScript/master/dist/assemblyscript.min.js"></script>
+<script src="https://unpkg.com/monaco-editor@0.8.3/min/vs/loader.js"></script>
 <script src="assets/main.js"></script>
 
 <button id="compile-button" class="compile">Compile →</button>
