--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div id="assembly" class="editor"></div>
 <div style="clear: both" />
 
-<script src="https://rawgit.com/dcodeIO/AssemblyScript/master/lib/binaryen/index.js"></script>
+<script src="https://rawgit.com/dcodeIO/binaryen.js/master/index.js"></script>
 <script src="https://rawgit.com/dcodeIO/AssemblyScript/master/dist/assemblyscript.min.js"></script>
 <script src="https://unpkg.com/monaco-editor@0.8.3/min/vs/loader.js"></script>
 <script src="assets/main.js"></script>
