Added gist support

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <img id="loading-icon" src="assets/loading.gif" alt="Loading..." />
 
 <div id="header">
-  <span class="r">see <a href="https://github.com/dcodeIO/AssemblyScript">github.com/dcodeIO/AssemblyScript</a> for details</span>
-  <strong>Assembly</strong>Script Playground
+  <span class="r"><strong>ProTip:</strong> ↸ Appending a <a href="https://gist.github.com/">Gist</a> as the hash will load it.</span>
+  <a href="https://github.com/dcodeIO/AssemblyScript"><strong>Assembly</strong>Script</a> Playground
 </div>
 
 <div id="source" class="editor"></div>
